ProjetCompil/Verif/Test/fail/varNonDeclare.cas
program

begin
	D := not(D);
end.
	
